# ncs-door-lock-and-access-control

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sysbuild  nrf54l15dk_nrf54l15_cpuapp.overlay  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf5340dk_nrf5340_cpuapp_uwb_dfu.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp_uwb_dfu.yml  prj.conf  prj_release.conf  sample.yaml  schedules_uwb.conf  sysbuild.cmake
app/boards/: nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_release.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_release.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_release.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp_release.overlay  nrf54lm20dk_spi_nrfutil_config.json  nrf54lm20dk_vddio_1v8_board_controller.json
app/snippets/schedules/: lock.matter  lock.zap  schedules.conf  snippet.yml
app/snippets/schedules/zap-generated/: IMClusterCommandHandler.cpp  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
app/src/: Kconfig  fatal_rtt.c  hw_init.cpp  main.cpp  platform_log.cpp
app/src/access_manager_impl_custom/: access_manager_impl.cpp  access_manager_impl.h
app/src/access_manager_impl_default/: Kconfig  access_manager_impl.cpp  access_manager_impl.h
app/src/aliro/: CMakeLists.txt  Kconfig  aliro_state_control.cpp  aliro_state_control.h  certification_provisioning.cpp  crypto_key_ids.h  init.cpp  init.h  interface.cpp  interface_access.cpp  interface_access_document.cpp  interface_ble.cpp  interface_ci_cert.cpp  interface_crypto.cpp  interface_reader_cert.cpp  interface_session.cpp  interface_uwb.cpp  test_key.h
app/src/aliro/access_document/: CMakeLists.txt  access_document.cddl
app/src/aliro/access_manager/: Kconfig  access_manager_impl.cpp  access_manager_impl.h
app/src/aliro/access_manager_impl_custom/: access_manager_impl.cpp  access_manager_impl.h
app/src/aliro/access_manager_impl_default/: Kconfig  access_manager_impl.cpp  access_manager_impl.h
app/src/aliro/aliro_work/: CMakeLists.txt  Kconfig  aliro_work.h  (+1 more)
app/src/app_callbacks/: CMakeLists.txt  app_callbacks.cpp  app_callbacks.h
app/src/bt_nus/: CMakeLists.txt  Kconfig  bt_nus.cpp  bt_nus.h
app/src/cli/: CMakeLists.txt  shell.cpp
app/src/dfu_smp/: CMakeLists.txt  Kconfig  dfu_smp_manager.cpp  dfu_smp_manager.h  dfu_smp_shell.cpp  dfu_smp_shell.h
app/src/matter/: CMakeLists.txt  Kconfig  app_task.cpp  app_task.h  bolt_lock_manager.cpp  bolt_lock_manager.h  door_lock_delegate.cpp  door_lock_delegate.h  init.cpp  time_sync_delegate.cpp  time_sync_delegate.h  zcl_callbacks.cpp
app/src/nfc_transport_impl/: CMakeLists.txt  Kconfig  nfc_transport_rfal.cpp  nfc_transport_rfal.h
app/src/platform/: CMakeLists.txt
app/src/storage/: CMakeLists.txt  Kconfig  storage.cpp  storage.h  storage_keys.h
app/sysbuild/ipc_radio/: prj.conf
applications/aliro-access-control-app/: CMakeLists.txt  Kconfig  Kconfig.ble.defconfig  Kconfig.defconfig  Kconfig.sysbuild  pm_static_nrf5340dk_nrf5340_cpuapp_uwb_dfu.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp_uwb_dfu.yml  prj.conf  prj_release.conf  sample.yaml
applications/aliro-access-control-app/boards/: nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_release.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20b_cpuapp.overlay  nrf54lm20dk_nrf54lm20b_cpuapp_release.overlay
applications/aliro-access-control-app/src/: Kconfig  main.cpp
drivers/nfc/stm/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.pal  Kconfig.rfal  Kconfig.shield  README.md
lib/: CMakeLists.txt  Kconfig
lib/aliro/: CMakeLists.txt  Kconfig  Kconfig.aliro  Kconfig.aliro.defconfig  Kconfig.ble.defconfig  Kconfig.defconfig
lib/aliro/include/: consts.h  errors.h
lib/qm35_uwb/: CMakeLists.txt  Kconfig  LICENSE  LICENSE.md
subsys/: CMakeLists.txt  Kconfig
subsys/advertising_arbiter/: CMakeLists.txt  Kconfig
subsys/advertising_arbiter/src/: ble_advertising_arbiter.cpp
subsys/aliro/: CMakeLists.txt  Kconfig
subsys/aliro/access_document/: CMakeLists.txt  Kconfig
subsys/aliro/aliro_service/: CMakeLists.txt  Kconfig
subsys/aliro/aliro_workqueue/: CMakeLists.txt  Kconfig
subsys/aliro/crypto_utils/: CMakeLists.txt  Kconfig
subsys/aliro/disambiguation/: CMakeLists.txt  Kconfig
subsys/aliro/door_lock_delegate/: CMakeLists.txt  Kconfig
subsys/aliro/gatt_server/: CMakeLists.txt  Kconfig
subsys/aliro/l2cap_server/: CMakeLists.txt  Kconfig
subsys/aliro/lock_sim/: CMakeLists.txt  Kconfig
subsys/aliro/reader_storage/: CMakeLists.txt  Kconfig
subsys/aliro/time_utils/: CMakeLists.txt  Kconfig
subsys/aliro/uwb/: CMakeLists.txt  Kconfig  uwb.cpp  uwb.h
subsys/ble_manager/: CMakeLists.txt  Kconfig
subsys/ble_manager/src/: ble_manager.cpp  ble_manager_auth.cpp  ble_manager_init.cpp
subsys/dfu_smp_service/: CMakeLists.txt  Kconfig
subsys/dfu_smp_service/src/: advertising.cpp  advertising.h  advertising_chip.cpp  callbacks.cpp  callbacks.h  callbacks_chip.cpp  dfu_smp_service.cpp  shell.cpp
subsys/external_nvs/: CMakeLists.txt  Kconfig
subsys/external_nvs/src/: aead.cpp  aead.h  counter.cpp  counter.h  external_nvs.cpp  key.cpp  key.h  nonce.cpp  nonce.h  shell.cpp  storage.cpp  storage.h
subsys/matter_access/: CMakeLists.txt  Kconfig
subsys/matter_access/src/: access_data_types.cpp  access_manager.cpp  access_manager_credentials.cpp  access_manager_schedules.cpp  access_manager_users.cpp  access_storage.cpp  access_storage_print.cpp  access_storage_print.h  access_storage_psa_ps.cpp
subsys/nfc_prop/: CMakeLists.txt  Kconfig
subsys/nus_service/: CMakeLists.txt  Kconfig
subsys/nus_service/src/: advertising.cpp  advertising.h  advertising_chip.cpp  nus_service.cpp
subsys/settings_utils/: CMakeLists.txt  Kconfig
subsys/settings_utils/src/: settings_utils.cpp
(+790 files in other folders)
